added manual update facility to installed apps page

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -86,7 +86,17 @@ $uninstall-app-modal-button-bg: #a965ba;
 $uninstall-app-modal-button-hover-bg: #b971cb;
 $uninstall-app-modal-button-text: #f1eaf3;
 
+$update-app-bg: #a965ad;
+$update-app-text: #ffffff;
+$update-app-caret: #c9add0;
+$update-app-open-bg: #e4dfe5;
+$update-app-open-text: #783189;
+$update-app-open-caret: #a965ba;
+$update-app-divider: #ccb8d1;
+
 // SIZING
+$button-border-radius: 0.5rem;
+
 $topbar-height: 8.5rem;
 $topbar-logo-icon-size: 6.044rem;
 $topbar-logo-margin-left: 2.5rem;
@@ -115,10 +125,12 @@ $app-container-min-width: 120px;
 $app-container-max-width: 200px;
 $app-container-margin-lr: 1.167rem;
 $app-container-padding-lr: 1.667rem;
-$app-container-padding-tb: 1.25rem;
+$app-container-padding-top: 2.48rem;
+$app-container-padding-bottom: 1.25rem;
 $app-container-box-shadow: 0.083rem 0.166rem $app-box-drp-shdw;
 $app-container-margin-tb: 2.416rem;
 $app-genre-font-size: 2rem;
+$app-image-height: 13.25rem;
 $app-image-large-width: 29.15rem;
 $app-image-large-max-height: 25rem;
 $app-image-large-margin-right: 2.5rem;
@@ -173,3 +185,11 @@ $uninstall-app-modal-button-spacing: 0.7rem;
 $uninstall-app-modal-blurb-p-margin-top: 1.5rem;
 $uninstall-app-modal-blurb-p-margin-bottom: 2.1rem;
 $uninstall-app-modal-header-margin-bottom: 1rem;
+
+$update-app-height: $app-container-padding-top;
+$update-app-font-size: 0.95rem;
+$update-app-caret-size: 1.65rem;
+$update-app-section-margin-tb: 0.77rem;
+$update-app-padding-lr: 1.4rem;
+$update-app-update-button-width: 7.1rem;
+$update-app-update-button-height: 1.32rem;
