generate fake app and update data for testing

--- a/app/client/templates/components/app-item.scss
+++ b/app/client/templates/components/app-item.scss
@@ -51,7 +51,10 @@
       font-size: $app-name-font-size;
       color: $app-name-text;
       line-height: $app-name-line-height;
-
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow-x: hidden;
+      
     }
 
     .app-author {
