--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -68,7 +68,7 @@
               </div>
             {{/if}}
 
-            {{> appTable genre='Installed' singleLine=true updateChrome=true installPage=true}}
+            {{> appTable genre='Updates Available' singleLine=true updateChrome=true installPage=true}}
 
           </div>
 
@@ -84,7 +84,7 @@
 
         <div class="genre-other">
 
-          {{> appTable genre='Installed' skipLines=1 installPage=true}}
+          {{> appTable genre='Installed No Updates' installPage=true}}
 
         </div>
 
