made most app tables non-reactive

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -146,7 +146,7 @@
 
       <div class="header-row">
 
-        <div class="text">NEW VERSION {{newVersionNumber}}</div>
+        <div class="text">NEW VERSION {{latestVersion}}</div>
 
         <i class="fa {{#if isOpen}}fa-caret-up{{else}}fa-caret-down{{/if}}"></i>
 
