amended installed bar css

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -89,17 +89,21 @@
 
           <div class="installed-bar">
 
-            <div class="install-date">
-              <div class="installed-text">
-                INSTALLED
-              </div>
-              <div class="install-date-inner">
-                {{briefDate installDetails.dateTime}}
-              </div>
-            </div>
+            <div class="installed-details">
 
-            <div class="installed-version">
-              V {{installDetails.version}}
+              <div class="install-date">
+                <div class="installed-text">
+                  INSTALLED
+                </div>
+                <div class="install-date-inner">
+                  {{briefDate installDetails.dateTime}}
+                </div>
+              </div>
+
+              <div class="installed-version">
+                V {{installDetails.version}}
+              </div>
+
             </div>
 
             <div class="uninstall-app">
