--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -22,7 +22,7 @@
       <div class="menu-text">Upload an App</div>
     </a>
 
-    <a class="menu-link" data-action="login-modal">
+    <a class="menu-link" href="/login">
       <i class="icon-my"></i>
       <div class="menu-text">{{#if currentUser}}{{currentUser.username}}{{else}}Log In{{/if}}</div>
     </a>
