added first apps-by-me page for when no apps have been added yet

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -94,6 +94,18 @@ $update-app-open-text: #783189;
 $update-app-open-caret: #a965ba;
 $update-app-divider: #ccb8d1;
 
+$speechbox-text: #783189;
+$purpose-text: #413d42;
+
+$large-button-bg: #f3e6ff;
+$large-button-text: #783189;
+$large-button-icon: #aa79c6;
+$large-button-border: #bb80ce;
+$large-button-primary-bg: #783189;
+$large-button-primary-text: #ffffff;
+$large-button-primary-icon: #a965ba;
+$large-button-primary-border: #783189;
+
 // SIZING
 $button-border-radius: 0.5rem;
 
@@ -193,3 +205,16 @@ $update-app-section-margin-tb: 0.77rem;
 $update-app-padding-lr: 1.4rem;
 $update-app-update-button-width: 7.1rem;
 $update-app-update-button-height: 1.32rem;
+
+$speechbox-padding-tb: 3.07rem;
+$speechbox-padding-left: 6.14rem;
+$speechbox-padding-right: 3.72rem;
+$speechbox-font-size: 2.55rem;
+$speechbox-margin-top: 2.4rem;
+$purpose-font-size: 2.8rem;
+$purpose-margin-bottom: 5.43rem;
+$or-gap: 13.3rem;
+
+$large-button-font-size: 2.39rem;
+$large-button-padding-tb: 2.25rem;
+$large-button-padding-lr: 2.95rem;
