--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -4,7 +4,7 @@
 
     <div class="contents">
 
-      <div class="installed-apps-title large">INSTALLED APPS</div>
+      <div class="apps-title large">INSTALLED APPS</div>
 
     </div>
 
