--- a/app/client/templates/installedApps/installedApps.scss
+++ b/app/client/templates/installedApps/installedApps.scss
@@ -1,6 +1,6 @@
 @import "../../stylesheets/variables";
 
-.installed-apps-title {
+.apps-title {
 
   font-size: $app-genre-font-size;
   color: $installed-apps-header-text;
