addeded responsive styling to apps-by-me page

--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -28,36 +28,42 @@
 
     <div class="top-section">
 
-      <img class="block sandstorm-cat" src="/images/sand-cat.png" />
+      <img class="sandstorm-cat" src="/images/sand-cat.png" />
 
-      <div class="block">
+      <div class="bubble-container">
 
         <div class="speech-bubble">
           Hmm,<br>
           it looks like you haven't uploaded any apps yet.
         </div>
 
-        <div class="purpose">
-          Give this page a purpose:
-        </div>
-
       </div>
 
     </div>
 
+    <div class="purpose">
+      Give this page a purpose:
+    </div>
+
     <div class="action-buttons">
 
-      <a class="primary large-button" href=""> <!-- TODO: add link to edit app -->
-        <i class="icon-myapps"></i>
-        UPLOAD YOUR FIRST APP
-      </a>
-      <div class="or">
-        OR
+      <div class="container">
+        <a class="primary large-button" href=""> <!-- TODO: add link to edit app -->
+          <i class="icon-myapps"></i>
+          UPLOAD YOUR FIRST APP
+        </a>
       </div>
-      <a class="large-button" href="https://github.com/sandstorm-io/sandstorm/wiki/Porting-Guide" target="_blank">
-        <i class="icon-porting-guide"></i>
-        READ THE PORTING GUIDE
-      </a>
+      <div class="container">
+        <div class="or">
+          OR
+        </div>
+      </div>
+      <div class="container">
+        <a class="large-button" href="https://github.com/sandstorm-io/sandstorm/wiki/Porting-Guide" target="_blank">
+          <i class="icon-porting-guide"></i>
+          READ THE APP PORTING GUIDE
+        </a>
+      </div>
 
     </div>
   </div>
