--- a/app/client/templates/genres/genre.scss
+++ b/app/client/templates/genres/genre.scss
@@ -22,7 +22,7 @@
       color: $genre-title-text;
       text-transform: uppercase;
       font-size: $genre-page-popular-height;
-      font-weight: lighter;
+      font-weight: lighterer;
       padding-top: $genre-page-popular-margin-top;
       padding-bottom: $genre-page-popular-margin-bottom;
       white-space: nowrap;
