--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -1,5 +1,4 @@
-// JUST A PLACEHOLDER UNTIL I GET A PROPER FONT
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);
 @import "variables";
 
 @font-face {
@@ -101,7 +100,7 @@
 .icon-upload:before { content: "\f11d"; }
 
 html {
-  font-family: "Lato", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: 300;
   font-size: 12px;
   font-size: 0.65vw;
