started apps-by-me main page

--- a/app/client/templates/appsByMe/appsByMe.scss
+++ b/app/client/templates/appsByMe/appsByMe.scss
@@ -43,6 +43,7 @@
         color: $speechbox-text;
         font-weight: lighter;
         margin-top: $speechbox-margin-top;
+        margin-right: 0.5rem;
 
         @media (max-width: $large-phone) {
 
