--- a/app/client/templates/components/app-table.html
+++ b/app/client/templates/components/app-table.html
@@ -13,3 +13,15 @@
   </div>
 
 </template>
+
+<template name="appTableLarge">
+
+  <div class="app-table-large">
+
+    {{#each appList}}
+      {{> appItemLarge app=this}}
+    {{/each}}
+
+  </div>
+
+</template>
