--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -10,7 +10,7 @@
 
   </div>
 
-  {{#if appsCount 'Apps By Me' 0 0}}
+  {{#if appsCount 'Apps By Me'}}
 
     {{> appsByMe_standard}}
 
@@ -74,7 +74,32 @@
 
   <div class="apps-by-me-standard">
 
-    <h1>THIS IS APPS BY ME STANDARD</h1>
+    {{> appsByMeBar}}
+
+    <div class="apps-by-me-container">
+
+    {{> appTableLarge genre='Apps By Me'}}
+
+    </div>
+
+  </div>
+
+</template>
+
+<template name="appsByMeBar">
+
+  <div class="apps-by-me-bar">
+
+    <div class="left-items">
+
+      <!-- TODO: once app-button component css has been merged -->
+
+    </div>
+    <div class="right-items">
+
+      <!-- TODO: once app-button component css has been merged -->
+
+    </div>
 
   </div>
 
