fixed merge problems

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -106,6 +106,10 @@ $large-button-primary-text: #ffffff;
 $large-button-primary-icon: #a965ba;
 $large-button-primary-border: #783189;
 
+$login-form-font-size: 2rem;
+$login-form-text: $topbar-item-bg;
+$login-form-active-text: $topbar-item-active-bg;
+
 // SIZING
 $button-border-radius: 0.5rem;
 
