--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -84,7 +84,7 @@
 
         <div class="genre-other">
 
-          {{> appTable genre='Installed No Updates' installPage=true reactive=true}}
+          {{> appTable genre='No Updates' installPage=true reactive=true}}
 
         </div>
 
