--- a/app/client/templates/components/app-table.scss
+++ b/app/client/templates/components/app-table.scss
@@ -1,6 +1,6 @@
 @import "../../stylesheets/variables";
 
-.app-table {
+.app-table, .app-table-large {
 
   margin-left: -$app-container-margin-lr;
   font-size: 0;
