--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -61,7 +61,7 @@
             {{else}}
               <div class="title">PENDING UPDATES</div>
               <div class="button-container">
-                <div class="sandstorm-button active" data-action="update-all-apps">
+                <div class="sandstorm-button secondary" data-action="update-all-apps">
                   <i class="fa fa-magic"></i>
                   UPDATE ALL
                 </div>
