--- a/app/client/templates/components/app-table.html
+++ b/app/client/templates/components/app-table.html
@@ -19,7 +19,7 @@
   <div class="app-table-large">
 
     {{#each appList}}
-      {{> appItemLarge app=this}}
+      {{> appItemFullWidth app=this}}
     {{/each}}
 
   </div>
